--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
+    "socket.io": "^4.7.4",
     "validator": "^13.11.0",
     "winston": "^3.11.0"
   }
