--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-cron": "^3.0.3",
     "prisma": "^5.7.1",
     "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "validator": "^13.11.0",
     "winston": "^3.11.0"
   }
