--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.8",
     "prisma": "^5.7.1",
     "socket.io": "^4.7.4",
     "validator": "^13.11.0",
